# todo_rust_iced_rust2024_rust1_85ver

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/iced_test/: Cargo.toml
examples/: hello_iced.rs
src/: main.rs
src/app/: filter.rs  global_fn.rs  message.rs  mod.rs  save_states.rs  task_states.rs  taskmessage.rs  todos_states.rs
src/error/: loaderror.rs  mod.rs  saveerror.rs
src/tests/: new_task.rs
test/: new_task.rs
