[package]
name = "todo_rust_iced_rust2024_rust1_85ver"
version = "0.1.0"
edition = "2024"

# [workspace]
# members = ["crates/iced_test"]

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
directories = "6.0.0"
iced = { version ="0.14.0-dev" , git = "https://github.com/iced-rs/iced", rev ="d5ed0d"}
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
wasmtimer = "0.4.1"

# [dev-dependencies]
# iced_test = { path="./crates/iced_test"}
